# aseprite-mcp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
agents/: animation-director.md  palette-smith.md  pixel-critic.md  rig-builder.md
demo/: create-live-demo.lua  export-gif.lua  install-extension.lua  live-demo-driver.js  package-lock.json  package.json
docs/: ARCHITECTURE.md  QUICKSTART.md  codex.md  install.md  live-command-matrix.md  live-protocol.md  live-tools.md  release.md  testing.md  troubleshooting.md
evals/: BENCHMARK.md  README.md  RESULTS.md  cases.json  judge.py  run.py  tier_b.json
hooks/: README.md  guard_batch_draw.py  health_check.py  hooks.json  palette_lint_hook.py
knowledge/: README.md  asset-catalog.json  glossary.md  scale-hierarchy.json  timing-budgets.json
mcp/: README.md  aseprite-live.json
rules/: 00-core-principles.md  01-palette-and-color.md  02-shading-outlining-aa.md  03-proportions-silhouette-3-4-view.md  04-animation.md  05-layers-and-rig.md  06-review-checklist.md  07-animation-review.md  README.md
scripts/: install-plugin.ps1  install-plugin.sh  pixel_doctor.py  uninstall-plugin.ps1  uninstall-plugin.sh  verify_install.py
skills/: README.md
specs/: SPEC-001-decoupled-ws-bridge.md  SPEC-002-lua-execution-opt-in-gate.md  SPEC-003-tilemap-tool-family.md  SPEC-004-constrained-semantic-drawing.md  SPEC-005-perception-fast-follow.md  SPEC-006-import-reference.md  SPEC-007-eval-gate.md  TEMPLATE.md  (+6 more)
(+145 files in other folders)
